# Secure-Android-Browser

.github/workflows/: main.yml
build_config/: args.gn
patches/: 01_enable_flag_secure.patch  02_spoof_user_agent.patch
